# rust-docker-bazel-repo

./: README.md  WORKSPACE.bazel
rust/: BUILD.bazel  Cargo.toml
